Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123089

qmltyperegistrar: missing "isConstructible" for QQuickStackViewArg

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7, 6.8.0 FF
    • 6.7
    • QML: Tooling
    • None
    • 4a660da8d (dev)

    Description

      We're missing an "isConstructible" entry for QQuickStackViewArg (which actually is constructible). Given that the type is actually constructible, this needs to be fixed.

      Note that the type can be constructed in the engine, so this only affects tooling.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            fabiankosmale Fabian Kosmale
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes