src/qmltyperegistrar/qqmltyperegistrarconstants_p.h
@@ -55,6 +55,7 @@ static constexpr QLatin1StringView S_IS_READONLY                  { "isReadonly"
 static constexpr QLatin1StringView S_IS_REQUIRED                  { "isRequired" };
 static constexpr QLatin1StringView S_IS_SCOPED                    { "isScoped" };
 static constexpr QLatin1StringView S_IS_SINGLETON                 { "isSingleton" };
+static constexpr QLatin1StringView S_IS_STRUCTURED                { "isStructured" };
 static constexpr QLatin1StringView S_METHOD                       { "Method" };
 static constexpr QLatin1StringView S_MODULE                       { "Module" };
 static constexpr QLatin1StringView S_NAME                         { "name" };
